<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Office Alarms</string>
    <string name="action_reset">Reset data</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="shortcut_name">Clear Cache Shortcut</string>
    <string name="pd_dayset_title">Week hours</string>
    <string name="pd_dayset_summ">How many work hours per weekday</string>
    <string name="pd_wifiset_title">Office WiFi</string>
    <string name="pd_wifiset_summ">WiFi hotspots to trigger events</string>
    <string name="pd_wifibt_title">Home WiFi</string>
    <string name="pd_wifibt_summ">WiFi hotspots to trigger events</string>
    <string name="pd_btauto_title">Home BT Device</string>
    <string name="pd_btauto_summ">Bluetooth device to connect at home</string>
    <string name="pk_round_title">Round at 5</string>
    <string name="pk_round_summ">Truncate at nearest 5 minutes</string>
    <string name="pk_clean_title">Cleaning alert</string>
    <string name="pk_clean_summ">Enable/disable cleaning time at office</string>
    <string name="pc_lunch_title">Lunch alerts</string>
    <string name="pk_lunch_title">Lunch time alerts</string>
    <string name="pk_lunch_summ">Alerts at lunch time begin-end</string>
    <string name="pk_lstart_title">Lunch time begin</string>
    <string name="pk_lstop_title">Lunch time end</string>
    <string name="txt_empty"></string>
    <string name="txt_hours">ore</string>
    <string name="lbl_arrival">Arrival:</string>
    <string name="lbl_leaving">Leave at:</string>
    <string name="lbl_tmpleft">Actual left:</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="dlg_btn_cancel">Cancel</string>
    <string name="msg_wifi_off">WiFi is currently disabled</string>
    <string name="msg_wifi_scan">Scanning for WiFi networks</string>
    <string name="msg_bt_off">Bluetooth is currently disabled</string>
    <string name="msg_leave_title">Go home!</string>
    <string name="msg_leave_text">Time to go home: </string>
    <string name="msg_blunc_title">Go to lunch!</string>
    <string name="msg_blunc_text">Lunch time started</string>
    <string name="msg_elunc_title">Get back to work!</string>
    <string name="msg_elunc_text">Lunch time ended</string>
    <string name="msg_clean_title">Pulizie!</string>
    <string name="msg_clean_text">Alle 18 è cleaning time</string>
    <string name="test_time">22:58</string>
    <string name="test_date">mer 20 nov</string>
    <string name="test_alarm">mer 22:58</string>
    <string name="test_day">mercoledì</string>
    <string name="test_wifi">ds9h0dvndsavad</string>
    <string name="test_boh">n/a</string>
    <string name="test_tre">22.06€ / 1,56GB</string>
    <string name="test_voldn">volume -</string>
    <string name="test_volup">volume +</string>
    <string name="test_cache">cache</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_tre">TreActivity</string>

</resources>