<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_empty_8"
    android:orientation="vertical"
    android:padding="10dp"
    android:showDividers="middle"
    tools:context="net.esorciccio.goa.MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_empty_8"
        android:showDividers="middle" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_empty_8"
            android:showDividers="middle" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_arrival"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_empty_8"
            android:showDividers="middle" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_leaving"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_empty_8"
            android:showDividers="middle" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_tmpleft"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

</LinearLayout>