<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >

    <TextView
        android:id="@+id/txt_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/txt_empty"
        android:drawableLeft="@drawable/wg_in"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/test_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_leaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/txt_empty"
        android:drawableLeft="@drawable/wg_out"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/test_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/txt_empty"
        android:drawableLeft="@drawable/rewind"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/test_boh"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_orange_light" />

</LinearLayout>